Fixed a bug where long fcs file names could overflow out of the dropdown, bumped version number

--- a/scss/dropdown-inline.scss
+++ b/scss/dropdown-inline.scss
@@ -54,6 +54,8 @@
 
         & > .text {
             flex-grow: 1;
+            overflow: hidden;
+            white-space: nowrap;
         }
 
         & > input {
